// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Detail with loading 1`] = `
<div>
  <div
    class="detail css-1nsfvvx"
  >
    <div
      class="css-1n890a7"
    >
      <div
        class="chakra-skeleton css-rych3e"
        data-testid="name-skeleton"
      />
    </div>
    <div
      class="css-jxadsl-Summary"
    >
      <div
        class="css-5g37ib-Summary"
      >
        <div
          class="chakra-skeleton css-ibmh67"
        />
      </div>
      <table
        class="chakra-table css-0"
        role="table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Number
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <div
                class="chakra-skeleton css-sf9g0d"
                data-testid="summary-skeleton"
              />
            </td>
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Types
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <div
                class="chakra-skeleton css-sf9g0d"
                data-testid="summary-skeleton"
              />
            </td>
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Height
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <div
                class="chakra-skeleton css-sf9g0d"
                data-testid="summary-skeleton"
              />
            </td>
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Weight
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <div
                class="chakra-skeleton css-sf9g0d"
                data-testid="summary-skeleton"
              />
            </td>
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Abilities
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <div
                class="chakra-skeleton css-sf9g0d"
                data-testid="summary-skeleton"
              />
            </td>
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Base exp.
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <div
                class="chakra-skeleton css-sf9g0d"
                data-testid="summary-skeleton"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <div
        class="css-bn3r0t"
      >
        Moves
      </div>
      <div
        class="chakra-skeleton css-yy4ngl"
        data-testid="moves-skeleton"
      />
    </div>
    <div
      class="css-cmyg6m"
    >
      <div
        class="chakra-skeleton css-qouu9h"
        data-testid="catch-button-skeleton"
      />
    </div>
  </div>
</div>
`;

exports[`renders Detail with results 1`] = `
<div>
  <div
    class="detail css-1nsfvvx"
  >
    <div
      class="css-1yz1o5g"
    >
      Something went wrong. Please try again later
    </div>
    <div
      class="css-1n890a7"
    >
      <div
        data-testid="capital-name"
      />
    </div>
    <div
      class="css-jxadsl-Summary"
    >
      <div
        class="css-5g37ib-Summary"
      >
        <div
          class="chakra-skeleton css-ibmh67"
        />
      </div>
      <table
        class="chakra-table css-0"
        role="table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Number
            </td>
            <td
              class="css-0"
              role="gridcell"
            />
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Types
            </td>
            <td
              class="css-0"
              role="gridcell"
            />
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Height
            </td>
            <td
              class="css-0"
              role="gridcell"
            />
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Weight
            </td>
            <td
              class="css-0"
              role="gridcell"
            />
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Abilities
            </td>
            <td
              class="css-0"
              role="gridcell"
            >
              <ol
                class="css-1bd4wsw"
                role="list"
              />
            </td>
          </tr>
          <tr
            class="css-0"
            role="row"
          >
            <td
              class="css-jhl0h9"
              role="gridcell"
            >
              Base exp.
            </td>
            <td
              class="css-0"
              role="gridcell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <div
        class="css-bn3r0t"
      >
        Moves
      </div>
      <div
        class="css-8ehw8a"
        data-testid="moves-container"
      />
    </div>
    <div
      class="css-cmyg6m"
    >
      <button
        class="chakra-button css-13zfu4m"
        data-testid="catch-button"
        type="button"
      >
        Catch!
      </button>
    </div>
  </div>
</div>
`;
